[Composer] Add composer definition to each component.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zendframework/zend-escaper",
-    "description": "Zend\\Escaper component",
+    "description": " ",
     "license": "BSD-3-Clause",
     "keywords": [
         "zf2",
@@ -9,11 +9,11 @@
     "homepage": "https://github.com/zendframework/zend-escaper",
     "autoload": {
         "psr-4": {
-            "Zend\\Escaper\\": "src/"
+            "Zend\\Escaper": "src/"
         }
     },
     "require": {
-        "php": ">=5.3.23"
+        "php": ">=5.3.3"
     },
     "extra": {
         "branch-alias": {
@@ -21,14 +21,14 @@
             "dev-develop": "2.5-dev"
         }
     },
-    "require-dev": {
-        "fabpot/php-cs-fixer": "1.7.*",
-        "satooshi/php-coveralls": "dev-master",
-        "phpunit/PHPUnit": "~4.0"
-    },
     "autoload-dev": {
         "psr-4": {
             "ZendTest\\Escaper\\": "test/"
         }
+    },
+    "require-dev": {
+        "fabpot/php-cs-fixer": "1.7.*",
+        "satooshi/php-coveralls": "dev-master",
+        "phpunit/PHPUnit": "~4.0"
     }
 }
