Optimize autoload prefix in composer.json
By having more specific autoload prefixes it is possible to reduce the number of stat calls made.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "homepage": "https://github.com/zendframework/zend-escaper",
     "autoload": {
         "psr-4": {
-            "Zend\\Escaper": "src/"
+            "Zend\\Escaper\\": "src/"
         }
     },
     "require": {
